feat(comic-font): add comic font

--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <!-- Google Font -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Your+Font&display=swap"
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap"
       rel="stylesheet"
     />
     <title>Bubble Birthday</title>
