--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
       href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap"
       rel="stylesheet"
     />
-    <title>Bubble Birthday</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chewy&display=swap"
+      rel="stylesheet"
+    />
+    <title>Happy Birthday Sen!</title>
   </head>
   <body class="font-custom bg-white">
     <div id="root"></div>
