--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       href="https://fonts.googleapis.com/css2?family=Chewy&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="icon"
+      href="/favicon.ico"
+      type="image/x-icon"
+    />
     <title>Happy Birthday Sen!</title>
   </head>
   <body class="font-custom bg-white">
